@startuml manga

' TODO: custom cover
' TODO: custom metadata
' TODO: link to online manga to be downloaded regularly

class Entry {
    Archive: Archive
    Thumbnail: []byte
    Order: int
}

Entry *-- Archive

class Cover {
    Filepath : string
    ImageType: ImageType
}

Cover -- ImageType

enum ImageType{
    PNG
    JPEG
    GIF
    WEBP
    TIFF
    BMP
}

class Archive {
    Title: string
    Path: string
    Type: ArchiveType
    Cover: Cover
    ModTime: time.Time
}

enum ArchiveType{
    ZIP
    RAR
}

Archive -- ArchiveType
Archive *-- Cover

@enduml